--- a/omeka-addons.css
+++ b/omeka-addons.css
@@ -34,23 +34,26 @@
 	margin-right: .5em;
 }
 
-
-
-.addon-info {
+.omeka-addons-content {
     float: left;
-    width: 48%;
+    width: 380px;	
 }
-.versions-list {
+
+.omeka-addons-addon-info {
     float: right;
     width: 48%;
 }
-.addon {
+.omeka-addons-versions-list {
+    float: right;
+    width: 48%;
+}
+.omeka-addons-addon {
     border-bottom: 1px dotted #AFAE99;
     margin-bottom: 18px;
     overflow: hidden;
     padding-bottom: 18px;
 }
-.button {
+.omeka-addons-button {
     background: url("/ui/i/glass-btn.png") repeat-x scroll 0 50% #990000;
     border: 1px solid #990000;
     border-radius: 8px 8px 8px 8px;
@@ -60,17 +63,32 @@
     text-align: center;
     text-decoration: none;
 }
-.button:hover {
+.omeka-addons-button:hover {
     background-color: #BB0000;
     border-color: #BB0000;
 }
-.theme-thumbnail {
+.omeka-addons-theme-thumbnail {
     margin-bottom: 18px;
     width: 300px;
 }
-.theme-thumbnail img {
+.omeka-addons-theme-thumbnail img {
     display: block;
     max-width: 100%;
 }
 
+ul.omeka-addons-term-list {
+	display: inline;
+	list-style: none;
+	margin-left: 0;		
+}
 
+ul.omeka-addons-term-list li {
+	display: inline;
+	list-style: none;		
+	margin-left: .5em;
+}
+
+.omeka-addons-author {
+	font-weight: bold;	
+}
+	
